--- a/tarea m2u1 css (parte 1)/formulario.html
+++ b/tarea m2u1 css (parte 1)/formulario.html
@@ -11,17 +11,17 @@
 
 <body>
     <form action="">
-        <p>
-            <input type="text" name="nombre" placeholder="nombre" class="datos">
-            <input type="text" name="apellido" placeholder="apellido" class="datos">
+        <p >
+            <textarea name="comentarios" id="comentarios" cols="30" rows="10" class="datos" placeholder="Comentario"></textarea>
         </p>
         <p>
-            <input type="email" name="email" placeholder="email" class="datos">
-            <input type="number" name="telefono" placeholder="teléfono" class="datos">
+            <input type="text" name="nombre" placeholder="Nombre" class="datos">
+            <input type="text" name="apellido" placeholder="Apellido" class="datos">
         </p>
         <p>
-            <textarea name="comentarios" id="comentarios" cols="30" rows="10" class="datos"></textarea>
-        </p>
+            <input type="number" name="telefono" placeholder="Teléfono" class="datos">
+            <input type="email" name="email" placeholder="Email" class="datos">
+        </p>        
         <p>
             <input type="reset" value="Borrar" id="borrar" class="datos">
             <input type="submit" value="Enviar" id="enviar" class="datos">
