--- a/tarea m2u1 css (parte 1)/home.html
+++ b/tarea m2u1 css (parte 1)/home.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV de Aluminé Vila</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +16,7 @@
 
 <body>
     <header>        
-        <h1>Aluminé Vila <img src="./imagen_de_perfil.jpeg" alt="Mi imagen de perfil"></h1>        
+        <h1>Aluminé Vila <img src="./img-cv.jpeg" alt="Mi imagen de perfil"></h1>        
     </header>
 
     <main>
@@ -41,23 +42,25 @@
         </section>
         <section>
             <h4>Perfil</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore voluptatem architecto corporis a.
-                Laborum
-                commodi amet eligendi id temporibus. Quam praesentium eveniet ullam facere tempora voluptas maiores
-                molestiae animi dolorum.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet necessitatibus sint cumque temporibus,
-                sapiente earum unde neque perspiciatis accusamus ipsum, maxime a iusto ad aperiam mollitia. Pariatur
-                porro
-                ullam laborum.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quidem doloribus, in deleniti facilis
-                laudantium quis officiis temporibus nobis dolorum aut rerum vel omnis veniam nesciunt saepe repudiandae
-                quod
-                dicta?</p>
+            <div id="perfil">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore voluptatem architecto corporis a.
+                    Laborum
+                    commodi amet eligendi id temporibus. Quam praesentium eveniet ullam facere tempora voluptas maiores
+                    molestiae animi dolorum.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet necessitatibus sint cumque temporibus,
+                    sapiente earum unde neque perspiciatis accusamus ipsum, maxime a iusto ad aperiam mollitia. Pariatur
+                    porro
+                    ullam laborum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quidem doloribus, in deleniti facilis
+                    laudantium quis officiis temporibus nobis dolorum aut rerum vel omnis veniam nesciunt saepe repudiandae
+                    quod
+                    dicta?</p>
+            </div>            
         </section>
     </main>
 
     <footer>
-        <p>Si querés contactarme, podés completar el siguiente <a href="./formulario.html">formulario</a></p>
+        <p>Si querés contactarme, podés completar el siguiente <a href="./formulario.html">formulario</a> o escribir a mis redes sociales <a href=""><i class="fa-brands fa-instagram-square"></i></a> <a href=""><i class="fa-brands fa-facebook"></i></a> <a href=""><i class="fa-brands fa-linkedin"></i></a></p>
     </footer>
 
 </body>
